--- a/public/help.html
+++ b/public/help.html
@@ -1,1 +1,11 @@
-<h1>thsi</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Help Page</title>
+  </head>
+  <body>
+    <h1>Help Page</h1>
+    <p>Some text here</p>
+  </body>
+</html>
